# toyml-rs

./: .gitignore  Cargo.toml  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: CI.yml
bindings/js/: Cargo.toml  index.js  package-lock.json  package.json
bindings/js/example/: index.js  package-lock.json  package.json  test.ts  tsconfig.json  webpack.config.js
bindings/js/src/: core.rs
bindings/js/src/clustering/: kmeans.rs
bindings/python/: Cargo.toml  pyproject.toml
bindings/python/examples/: kmeans.py
bindings/python/python/toymlrs/: __init__.py  __init__.pyi  _toymlrs.pyi  clustering.pyi
bindings/python/src/: kmeans.rs  lib.rs
bindings/python/src/clustering/: kmeans.rs
bindings/python/tests/clustering/: test_kmeans.py
crates/toymlrs-clustering/: Cargo.toml
crates/toymlrs-clustering/src/: kmeans.rs  lib.rs  main.rs
examples/: kmeans.py
python/rustml/: __init__.py
python/toymlrs/: __init__.py  _toymlrs.pyi
src/: kmeans.rs  lib.rs  main.rs
