[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = "toymlrs"
requires-python = ">=3.8"
dependencies = []
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version"]
[tool.maturin]
features = ["pyo3/extension-module"]
module-name = "toymlrs._toymlrs"
python-source = "python"

[project.optional-dependencies]
dev = ["ipython", "ruff"]


[tool.ruff]
line-length = 120
target-version = "py38"

[tool.ruff.lint]
ignore = ["F403", "F405"]